# University

./: .gitignore  README.md
2. Semestr/1. Programming and algorithmic 1 (BI-PA2.21)/1. Progtest/3. Semestral work/: CMakeLists.txt  Makefile  README.md  prohlaseni.txt  zadani.txt
2. Semestr/1. Programming and algorithmic 1 (BI-PA2.21)/1. Progtest/3. Semestral work/3. Semestral work/: CDataSize.cpp  CDataSize.h  CFloat.cpp  CFloat.h  CFloatBig.cpp  CFloatBig.h  CInteger.cpp  CInteger.h  CIntegerBig.cpp  CIntegerBig.h  CParsData.cpp  CParsData.h  CShuntYardAlg.cpp  CShuntYardAlg.h  CType.cpp  CType.h  CTypeBig.cpp  CTypeBig.h  CVariable.cpp  CVariable.h  main.cpp
2. Semestr/1. Programming and algorithmic 1 (BI-PA2.21)/1. Progtest/3. Semestral work/doc/: CDataSize_8cpp.html  CDataSize_8h.html  CDataSize_8h__incl.md5  CFloatBig_8cpp__incl.md5  CFloat_8cpp.html  CIntegerBig_8cpp.html  CIntegerBig_8h.html  CIntegerBig_8h__dep__incl.md5  CIntegerBig_8h_source.html  CInteger_8cpp__incl.md5  CInteger_8h.html  CInteger_8h__incl.md5  CInteger_8h_source.html  CParsData_8cpp.html  CParsData_8h.html  CParsData_8h__dep__incl.md5  CParsData_8h_source.html  CShuntYardAlg_8cpp.html  CShuntYardAlg_8cpp__incl.md5  CShuntYardAlg_8h.html  CShuntYardAlg_8h__dep__incl.md5  CShuntYardAlg_8h__incl.md5  CShuntYardAlg_8h_source.html  annotated.html  classCDataSize-members.html  classCDataSize.html  classCDataSize__coll__graph.md5  classCDataSize_a499bc2d2d295caa926457b916b3d4d6d_icgraph.md5  classCDataSize_a6774f8b3d725b828a58fc4c6d071d095_icgraph.md5  classCFloat-members.html  classCFloat.html  (+74 more)
(+1167 files in other folders)
